--- a/css/reveal.scss
+++ b/css/reveal.scss
@@ -1867,3 +1867,8 @@ $notesWidthPercent: 25%;
 @import 'print/pdf.scss';
 @import 'print/paper.scss';
 
+/*********************************************
+ * Custom
+ *********************************************/
+
+ @import 'versionlens'
